@@ -38,6 +38,8 @@
 <p>2015-04-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/miff.c (WriteRunlengthPacket): Quiet Coverity 10186 and
+10214 &quot;Missing break in switch&quot;.</li>
 <li>magick/pixel_cache.c (GetCacheInfo): Quiet Coverity 10208 &quot;Data
 race condition&quot;.</li>
 <li>magick/blob.c (CloneBlobInfo): Quiet Coverity 10188 &quot;Data race
