@@ -1,5 +1,8 @@
 2015-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/miff.c (WriteRunlengthPacket): Quiet Coverity 10186 and
+	10214 "Missing break in switch".
+
 	* magick/pixel_cache.c (GetCacheInfo): Quiet Coverity 10208 "Data
 	race condition".
 
